--- a/MovieBrowser/Resources/Base.lproj/Main.storyboard
+++ b/MovieBrowser/Resources/Base.lproj/Main.storyboard
@@ -85,8 +85,8 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20.5" id="7Ca-fa-YDk"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.2274509804" green="0.21960784310000001" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -103,6 +103,7 @@
                                         <connections>
                                             <outlet property="releaseDate" destination="cdN-bS-jnn" id="BXU-aB-MFw"/>
                                             <outlet property="title" destination="gMh-qN-bFR" id="If3-yb-q9w"/>
+                                            <segue destination="YuP-Ma-vcA" kind="show" identifier="segueOpenDetail" id="cgn-ew-cuH"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -138,58 +139,73 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENZ-rL-hao">
-                                <rect key="frame" x="157" y="94" width="100" height="65"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bpd-rt-X95">
-                                <rect key="frame" x="20" y="223.5" width="374" height="638.5"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xko-lY-iVV">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="iDf-Nw-nSt">
-                                        <rect key="frame" x="0.0" y="0.0" width="187" height="638.5"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Movie Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8p-vD-P4w">
-                                        <rect key="frame" x="187" y="0.0" width="187" height="638.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GR5-p6-Jrg">
+                                        <rect key="frame" x="157" y="86.5" width="100" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20.5" id="BXh-HN-N31"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.2274509804" green="0.21960784310000001" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENZ-rL-hao">
+                                        <rect key="frame" x="24" y="24" width="366" height="38.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" verticalHuggingPriority="251" text="Overview label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8p-vD-P4w">
+                                        <rect key="frame" x="211" y="131" width="179" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="iDf-Nw-nSt">
+                                        <rect key="frame" x="24" y="131" width="150" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="1kS-ZP-n6u"/>
+                                            <constraint firstAttribute="height" constant="150" id="7J1-UU-Aaf"/>
+                                            <constraint firstAttribute="width" constant="150" id="b1m-9q-0Am"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="lPB-jE-Iue"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GR5-p6-Jrg">
-                                <rect key="frame" x="157" y="183" width="100" height="20.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20.5" id="BXh-HN-N31"/>
+                                    <constraint firstItem="TYi-IC-bIl" firstAttribute="trailing" secondItem="ENZ-rL-hao" secondAttribute="trailing" constant="24" id="7lj-h9-83P"/>
+                                    <constraint firstItem="iDf-Nw-nSt" firstAttribute="leading" secondItem="eCx-Dc-rhm" secondAttribute="leading" constant="24" id="Hnb-NI-5Tt"/>
+                                    <constraint firstItem="iDf-Nw-nSt" firstAttribute="top" secondItem="GR5-p6-Jrg" secondAttribute="bottom" constant="24" id="JOe-CS-SMN"/>
+                                    <constraint firstItem="Z8p-vD-P4w" firstAttribute="leading" secondItem="iDf-Nw-nSt" secondAttribute="trailing" constant="37" id="Lzb-1L-9p1"/>
+                                    <constraint firstAttribute="trailing" secondItem="Z8p-vD-P4w" secondAttribute="trailing" constant="24" id="NeH-Av-7Tu"/>
+                                    <constraint firstItem="Z8p-vD-P4w" firstAttribute="top" secondItem="GR5-p6-Jrg" secondAttribute="bottom" constant="24" id="VbZ-Pl-mX8"/>
+                                    <constraint firstItem="GR5-p6-Jrg" firstAttribute="centerX" secondItem="Xko-lY-iVV" secondAttribute="centerX" id="bq4-Qb-TB8"/>
+                                    <constraint firstItem="ENZ-rL-hao" firstAttribute="centerX" secondItem="Xko-lY-iVV" secondAttribute="centerX" id="cVO-nz-ck9"/>
+                                    <constraint firstItem="ENZ-rL-hao" firstAttribute="leading" secondItem="eCx-Dc-rhm" secondAttribute="leading" constant="24" id="eq9-qB-gfX"/>
+                                    <constraint firstItem="GR5-p6-Jrg" firstAttribute="top" secondItem="ENZ-rL-hao" secondAttribute="bottom" constant="24" id="v7m-wx-D1g"/>
+                                    <constraint firstAttribute="bottom" secondItem="Z8p-vD-P4w" secondAttribute="bottom" constant="656.5" id="x3z-6k-9EZ"/>
+                                    <constraint firstItem="ENZ-rL-hao" firstAttribute="top" secondItem="eCx-Dc-rhm" secondAttribute="top" constant="24" id="yIg-tI-9tM"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <viewLayoutGuide key="contentLayoutGuide" id="TYi-IC-bIl"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="eCx-Dc-rhm"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PLb-Ce-rOW"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="GR5-p6-Jrg" firstAttribute="top" secondItem="kgx-Vw-0gk" secondAttribute="top" constant="183" id="0Qo-va-FHQ"/>
-                            <constraint firstItem="GR5-p6-Jrg" firstAttribute="centerX" secondItem="ENZ-rL-hao" secondAttribute="centerX" id="Bte-j8-9ko"/>
-                            <constraint firstItem="PLb-Ce-rOW" firstAttribute="bottom" secondItem="bpd-rt-X95" secondAttribute="bottom" id="JUt-BA-3Y9"/>
-                            <constraint firstItem="bpd-rt-X95" firstAttribute="leading" secondItem="PLb-Ce-rOW" secondAttribute="leading" constant="20" id="Ri9-uG-fEe"/>
-                            <constraint firstItem="ENZ-rL-hao" firstAttribute="top" secondItem="PLb-Ce-rOW" secondAttribute="top" constant="50" id="Rmd-7e-RNN"/>
-                            <constraint firstItem="GR5-p6-Jrg" firstAttribute="top" secondItem="ENZ-rL-hao" secondAttribute="bottom" constant="24" id="Umc-1C-cHR"/>
-                            <constraint firstItem="bpd-rt-X95" firstAttribute="top" secondItem="GR5-p6-Jrg" secondAttribute="bottom" constant="20" id="Ygf-yz-mKa"/>
-                            <constraint firstItem="GR5-p6-Jrg" firstAttribute="trailing" secondItem="ENZ-rL-hao" secondAttribute="trailing" id="iZ2-Oa-olY"/>
-                            <constraint firstItem="PLb-Ce-rOW" firstAttribute="trailing" secondItem="bpd-rt-X95" secondAttribute="trailing" constant="20" id="rEM-UF-0s6"/>
-                            <constraint firstItem="ENZ-rL-hao" firstAttribute="centerX" secondItem="kgx-Vw-0gk" secondAttribute="centerX" id="y3I-oL-Cs1"/>
+                            <constraint firstItem="Xko-lY-iVV" firstAttribute="leading" secondItem="PLb-Ce-rOW" secondAttribute="leading" id="3Y5-Ah-SEf"/>
+                            <constraint firstItem="Xko-lY-iVV" firstAttribute="top" secondItem="PLb-Ce-rOW" secondAttribute="top" id="INL-6x-dx1"/>
+                            <constraint firstItem="PLb-Ce-rOW" firstAttribute="bottom" secondItem="Xko-lY-iVV" secondAttribute="bottom" id="Jud-nt-4VI"/>
+                            <constraint firstItem="PLb-Ce-rOW" firstAttribute="trailing" secondItem="Xko-lY-iVV" secondAttribute="trailing" id="ynP-6a-QMX"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="V8a-da-fJM"/>
                     <connections>
                         <outlet property="descriptionLabel" destination="Z8p-vD-P4w" id="5A0-fO-1kP"/>
                         <outlet property="posterImage" destination="iDf-Nw-nSt" id="8rk-Nj-PVS"/>
-                        <outlet property="releaseLabel" destination="GR5-p6-Jrg" id="xpF-Br-2t8"/>
-                        <outlet property="title" destination="GR5-p6-Jrg" id="7hX-nA-Xdo"/>
-                        <outlet property="titleLabel" destination="ENZ-rL-hao" id="5fP-tb-qf6"/>
+                        <outlet property="releaseLabel" destination="GR5-p6-Jrg" id="Xl5-hJ-gE7"/>
+                        <outlet property="titleLabel" destination="ENZ-rL-hao" id="Ft8-E1-xWU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dzR-53-5UI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
